--- a/resources/index.html
+++ b/resources/index.html
@@ -8,7 +8,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Build Kits</title>
+	<title>Buildpacks</title>
 	<meta name="description" content="Mix and match buildpacks">
 	<meta name="author" content="Heroku, Inc.">
 
@@ -32,12 +32,12 @@
 	<div class="container">
 		<div class="sixteen columns">
 			<h1 class="remove-bottom eight columns"
-                style="margin-top: 40px">Build Kits</h1>
+                style="margin-top: 40px">Buildpacks</h1>
             <p style="float: right; margin-top: 40px;"
                id="login"><a href="/login">Log in</a></p>
 			<hr />
 		</div>
-		<div class="two-thirds column">
+		<div class="eight columns">
 		  <ul id="buildpacks">
             <li>
               <h4>heroku/clojure</h4>
@@ -48,18 +48,45 @@
               [<a class="tgz" href="">tgz</a>]</p></li>
           </ul>
 		</div>
-		<div class="one-third column explaination">
-			<h3>What are Build Kits?</h3>
-			<p>You can mix and match your own set of buildpacks.</p>
-			<ul class="square">
-				<li>Each buildpack with a matching <code>bin/detect</code>
-				  script will be activated.</li>
-                <li>Publish new buildpacks with
-                  the <a href="https://github.com/heroku/heroku-buildpacks">heroku-buildpacks</a>
-                  plugin.</li>
-                <li id="yours"><a id="kit" href="">Your Build Kit</a> can be
-                  used with <a href="https://github.com/ddollar/anvil">Anvil</a>.</li>
-			</ul>
+		<div class="six columns explaination">
+			<h3>What are Buildpacks?</h3>
+
+            <p><a href="https://devcenter.heroku.com/articles/buildpacks">Buildpacks</a>
+              are the adapter between application code and the Heroku
+              platform, turning pushed code into "slugs" suitable for
+              deployment. A buildpack targets a specific runtime or build
+              tool.</p>
+
+            <!-- <p>To use a buildpack in a given app, run <kbd>heroku config:add BUILDPACK_URL=$URL</kbd>.</p>p-->
+
+            <h3>Creating a Buildpack</h3>
+
+            <p>If you want to deploy an app that's not yet supported
+              by any of the existing buildpacks, you can create your
+              own. Buildpacks at their core consist of two
+              scripts, <tt>bin/detect</tt> for determining whether
+              they apply to a given app, and <tt>bin/compile</tt> for
+              generating the actual slug.
+              See <a href="https://devcenter.heroku.com/articles/buildpack-api">the
+              devcenter</a> for the details of how those scripts work.</p>
+
+            <p>Once you've written your buildpack, you can publish it
+              here using
+              the <a href="https://github.com/heroku/heroku-buildpacks">heroku-buildpacks</a>
+              plugin:</p>
+
+            <pre>$ heroku plugins:install https://github.com/heroku/heroku-buildpacks
+$ cd /path/to/my/buildpack
+$ heroku buildpacks:publish me/my-buildpack</pre>
+
+            <p>Buildpacks are scoped to an organization, which is
+              specified by the part preceding the slash; in the
+              example above "me" is the organization and
+              "my-buildpack" is the buildpack name.</p>
+
+            <p>The plugin allows you to list revisions and roll back
+              using the <tt>buildpacks:revisions</tt>
+              and <tt>buildpacks:rollback</tt> commands respectively.</p>
 		</div>
 	</div><!-- container -->
 </body>
